changed :jvm-opts